(library
 (name virtualtavern)
 (libraries unix minttea)
 (modules futil drink conversation person manager topic))

(install
 (section lib)
 (files
  resources/words/adjectives/adjectives.txt
  resources/words/nouns/nouns.txt
  resources/words/adverbs/adverbs.txt
  resources/words/verbs/verbs.txt))
