(library
 (name virtualtavern)
 (libraries unix minttea)
 (modules futil astar tavern manager topic drink conversation person renderer))

(install
 (section lib)
 (files
  resources/words/adjectives/adjectives.txt
  resources/words/nouns/nouns.txt
  resources/words/adverbs/adverbs.txt
  resources/words/verbs/verbs.txt))

